--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 
 <body>
 <h1>Mary Jackson</h1>
+<h3>Mathematician and Aerospace Engineer</h3>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Photo of Mary Jackson working with a computer at NASA"></img>
+
+<h2>Timeline</h2>
+<p>1921 - Born on April 9 to Ella and Frank Winston.</p>
+<p>		- Graduated from George P. Phenix Training School, an all-black school. </p>
+<p>1942 - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
+<p>1942-1943 - Taught math at a black school in Calvert County, Maryland.</p>
+<p>1951 - Recruited by the National Advisory Committee for Aeronautics as a research mathematician at the Langley Research Center in Hampton, VA. Worked in the West Area Computing Section, which was segregated and consisted entirely of African-Americans.</p>
+<p>1953 - Worked in the Supersonic Pressure Tunnel. Successfully petitioned the City of Hampton to take graduate courses in math and physics for all-white students. Became NASA's first black female engineer after completing the courses.</p>
+<p>1985 - Retired from NASA.</p>
+<p>2005 - Passed away on February 11 at age 83.
+<p></p>
 </body>
 
 </html>
