Added external link

--- a/index.html
+++ b/index.html
@@ -13,18 +13,33 @@
 <body>
 <h1>Mary Jackson</h1>
 <h3>Mathematician and Aerospace Engineer</h3>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Photo of Mary Jackson working with a computer at NASA"></img>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Photo of Mary Jackson working at NASA"></img>
 
 <h2>Timeline</h2>
 <p>1921 - Born on April 9 to Ella and Frank Winston.</p>
-<p>		- Graduated from George P. Phenix Training School, an all-black school. </p>
+<p>1937	- Graduated from George P. Phenix Training School, an all-black school. </p>
 <p>1942 - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
 <p>1942-1943 - Taught math at a black school in Calvert County, Maryland.</p>
-<p>1951 - Recruited by the National Advisory Committee for Aeronautics as a research mathematician at the Langley Research Center in Hampton, VA. Worked in the West Area Computing Section, which was segregated and consisted entirely of African-Americans.</p>
-<p>1953 - Worked in the Supersonic Pressure Tunnel. Successfully petitioned the City of Hampton to take graduate courses in math and physics for all-white students. Became NASA's first black female engineer after completing the courses.</p>
+<p>1943 - Worked as a secretary and bookkeeper for the United Service Organizations. 
+<p>1951 - Recruited by the National Advisory Committee for Aeronautics as a research mathematician at the Langley Research Center in Hampton, VA. Worked as a "human-computer" in the West Area Computing Section, which was segregated and consisted entirely of African-Americans.</p>
+<p>1953 - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to take classes and join a special training program to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to take graduate courses in math and physics, which at the time was only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
+<p>1979 - Left her engineering position to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager.  Worked to foster gender equality in the hiring and promotion process at NASA.</p>
 <p>1985 - Retired from NASA.</p>
-<p>2005 - Passed away on February 11 at age 83.
-<p></p>
+<p>2005 - Passed away on February 11 at age 83.</p>
+
+<h3>Other career achievements/activities:</h3>
+<ul>
+<li>Served as a Girl Scouts leader for 20 years.</li>
+<li>Was a member of the Alpha Kappa Alpha Sorority.</li>
+</ul>
+
+<h3>Awards</h3>
+<ul>
+<li>Apollo Group Achievement Award</li>
+<li>Langley's Volunteer of the Year (1976)</li>
+</ul>
 </body>
+
+<p>To learn more about Mary Jackson, visit <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjq_Oj_4PzUAhUI7oMKHdfcA0MQFggmMAA&url=https%3A%2F%2Fwww.nasa.gov%2Fcontent%2Fmary-jackson-biography&usg=AFQjCNHkZrrJYSQKRdB0Jyo6VJy8SXRjdw">NASA</a>.</p>
 
 </html>
