Combined awards/activities section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p>1942 - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
 <p>1942-1943 - Taught math at a black school in Calvert County, Maryland.</p>
 <p>1943 - Worked as a secretary and bookkeeper for the United Service Organizations. 
-<p>1951 - Recruited by the National Advisory Committee for Aeronautics as a research mathematician at the Langley Research Center in Hampton, VA. Worked as a "human-computer" in the West Area Computing Section, which was segregated and consisted entirely of African-Americans.</p>
+<p>1951 - Recruited by the National Advisory Committee for Aeronautics (which later became NASA) to work at the Langley Research Center in Hampton, VA. She began her career there as a human computer in the segregated West Area Computing Section.</p>
 <p>1953 - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to take classes and join a special training program to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to take graduate courses in math and physics, which at the time was only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
 <p>1979 - Left her engineering position to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager.  Worked to foster gender equality in the hiring and promotion process at NASA.</p>
 <p>1985 - Retired from NASA.</p>
@@ -31,12 +31,8 @@
 <ul>
 <li>Served as a Girl Scouts leader for 20 years.</li>
 <li>Was a member of the Alpha Kappa Alpha Sorority.</li>
-</ul>
-
-<h3>Awards</h3>
-<ul>
-<li>Apollo Group Achievement Award</li>
-<li>Langley's Volunteer of the Year (1976)</li>
+<li>Received the Apollo Group Achievement Award.</li>
+<li>Received Langley's Volunteer of the Year Award in 1976.</li>
 </ul>
 </body>
 
