--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<!-- CSS -->
+<link rel="stylesheet" href="styles.css">
+<!-- Google fonts -->
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,400 | Open Sans" rel="stylesheet"> 
+
 <title>Mary Jackson</title>
 </header>
 
 <body>
+<div class="text-center" id="top">
 <h1>Mary Jackson</h1>
-<h3>Mathematician and Aerospace Engineer</h3>
+<p id="occupation">Mathematician and Aerospace Engineer</p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Photo of Mary Jackson working at NASA"></img>
+</div>
 
+<div id="content">
+<p id="intro">At a time of not only segregation, but also the belief that math and science is soley for men, Mary Jackson overcame challenging obstacles to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>.Jackson's determination and dedication to fostering diversity in math and the sciences is seen throughout her lifework.</p>
+
+<div class="well">
 <h2>Timeline</h2>
 <p>1921 - Born on April 9 to Ella and Frank Winston.</p>
 <p>1937	- Graduated from George P. Phenix Training School, an all-black school. </p>
@@ -22,11 +33,13 @@
 <p>1942-1943 - Taught math at a black school in Calvert County, Maryland.</p>
 <p>1943 - Worked as a secretary and bookkeeper for the United Service Organizations. 
 <p>1951 - Recruited by the National Advisory Committee for Aeronautics (which later became NASA) to work at the Langley Research Center in Hampton, VA. She began her career there as a human computer in the segregated West Area Computing Section.</p>
-<p>1953 - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to take classes and join a special training program to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to take graduate courses in math and physics, which at the time was only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
-<p>1979 - Left her engineering position to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager.  Worked to foster gender equality in the hiring and promotion process at NASA.</p>
+<p>1953 - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to join a special training program and take courses in math and physics to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to be allowed to take the required graduate courses, which at the time were only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
+<p>1979 - Took a demotion to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager. Was dedicated to helping women and other minorities at NASA advance their careers.</p>
 <p>1985 - Retired from NASA.</p>
 <p>2005 - Passed away on February 11 at age 83.</p>
+</div>
 
+<div class="well">
 <h3>Other career achievements/activities:</h3>
 <ul>
 <li>Served as a Girl Scouts leader for 20 years.</li>
@@ -34,8 +47,9 @@
 <li>Received the Apollo Group Achievement Award.</li>
 <li>Received Langley's Volunteer of the Year Award in 1976.</li>
 </ul>
+</div>
 </body>
 
-<p>To learn more about Mary Jackson, visit <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjq_Oj_4PzUAhUI7oMKHdfcA0MQFggmMAA&url=https%3A%2F%2Fwww.nasa.gov%2Fcontent%2Fmary-jackson-biography&usg=AFQjCNHkZrrJYSQKRdB0Jyo6VJy8SXRjdw">NASA</a>.</p>
-
+<p id="more-info">To learn more about Mary Jackson, please visit <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjq_Oj_4PzUAhUI7oMKHdfcA0MQFggmMAA&url=https%3A%2F%2Fwww.nasa.gov%2Fcontent%2Fmary-jackson-biography&usg=AFQjCNHkZrrJYSQKRdB0Jyo6VJy8SXRjdw">NASA</a>.</p>
+</div>
 </html>
