--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- CSS -->
 <link rel="stylesheet" href="styles.css">
 <!-- Google fonts -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:300,400 | Open Sans" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Open Sans" rel="stylesheet"> 
 
 <title>Mary Jackson</title>
 </header>
@@ -23,20 +23,20 @@
 </div>
 
 <div id="content">
-<p id="intro">At a time of not only segregation, but also the belief that math and science is soley for men, Mary Jackson overcame challenging obstacles to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>.Jackson's determination and dedication to fostering diversity in math and the sciences is seen throughout her lifework.</p>
+<p id="intro">In a period of racial segregation and (still persisting) gender bias in the STEM fields, Mary Jackson overcame the odds to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>. Jackson's determination and dedication to fostering diversity in STEM is apparent throughout her lifework.</p>
 
 <div class="well">
 <h2>Timeline</h2>
-<p>1921 - Born on April 9 to Ella and Frank Winston.</p>
-<p>1937	- Graduated from George P. Phenix Training School, an all-black school. </p>
-<p>1942 - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
-<p>1942-1943 - Taught math at a black school in Calvert County, Maryland.</p>
-<p>1943 - Worked as a secretary and bookkeeper for the United Service Organizations. 
-<p>1951 - Recruited by the National Advisory Committee for Aeronautics (which later became NASA) to work at the Langley Research Center in Hampton, VA. She began her career there as a human computer in the segregated West Area Computing Section.</p>
-<p>1953 - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to join a special training program and take courses in math and physics to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to be allowed to take the required graduate courses, which at the time were only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
-<p>1979 - Took a demotion to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager. Was dedicated to helping women and other minorities at NASA advance their careers.</p>
-<p>1985 - Retired from NASA.</p>
-<p>2005 - Passed away on February 11 at age 83.</p>
+<p><span class = "year">1921</span> - Born on April 9 to Ella and Frank Winston.</p>
+<p><span class = "year">1937</span> - Graduated from George P. Phenix Training School, an all-black school. </p>
+<p><span class = "year">1942</span> - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
+<p><span class = "year">1942-1943</span> - Taught math at a black school in Calvert County, Maryland.</p>
+<p><span class = "year">1943</span> - Worked as a secretary and bookkeeper for the United Service Organizations. 
+<p><span class = "year">1951</span> - Recruited by the National Advisory Committee for Aeronautics (which later became NASA) to work at the Langley Research Center in Hampton, VA. She began her career there as a human computer in the segregated West Area Computing Section.</p>
+<p><span class = "year">1953</span> - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to join a special training program and take courses in math and physics to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to be allowed to take the required graduate courses, which at the time were only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
+<p><span class = "year">1979</span> - Took a demotion to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager. Was dedicated to helping women and other minorities at NASA advance their careers.</p>
+<p><span class = "year">1985</span> - Retired from NASA.</p>
+<p><span class = "year">2005</span> - Passed away on February 11 at age 83.</p>
 </div>
 
 <div class="well">
