--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- CSS -->
 <link rel="stylesheet" href="styles.css">
 <!-- Google fonts -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Open Sans" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Open Sans|Playfair Display" rel="stylesheet"> 
 
 <title>Mary Jackson</title>
 </head>
