Changed HTML tag for subsection

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <!-- CSS -->
 <link rel="stylesheet" href="styles.css">
 <!-- Google fonts -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Open Sans" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Open Sans|Playfair Display" rel="stylesheet"> 
 
 <title>Mary Jackson</title>
 </header>
 
 <body>
 <div class="text-center" id="top">
-<h1>Mary Jackson</h1>
+<p id="title">Mary Jackson</p>
 <p id="occupation">Mathematician and Aerospace Engineer</p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Photo of Mary Jackson working at NASA"></img>
 </div>
 
 <div id="content">
-<p id="intro">In a period of racial segregation and (still persisting) gender bias in the STEM fields, Mary Jackson overcame the odds to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>. Jackson's determination and dedication to fostering diversity in STEM is apparent throughout her lifework.</p>
+<p id="intro">In a period of racial segregation and (still persisting) gender bias in the STEM fields, Mary Jackson overcame the odds to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on author Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>. Jackson's determination and dedication to fostering diversity in STEM is apparent throughout her lifework.</p>
 
 <div class="well">
 <h2>Timeline</h2>
@@ -40,7 +40,7 @@
 </div>
 
 <div class="well">
-<h3>Other career achievements/activities:</h3>
+<h2>Other career achievements/activities:</h2>
 <ul>
 <li>Served as a Girl Scouts leader for 20 years.</li>
 <li>Was a member of the Alpha Kappa Alpha Sorority.</li>
