Font and HTML tag changes, plus SCSS refactoring.

--- a/index.html
+++ b/index.html
@@ -8,30 +8,31 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="style.css">
 
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Open Sans|Playfair Display" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
 
 	<title>Mary Jackson</title>
 </head>
 
 <body>
-	<header class="text-center" id="top">
-		<h1 id="title">Mary Jackson</h1>
-		<p id="occupation">Mathematician and Aerospace Engineer</p>
-		
-		<figure>
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Mary Jackson working at NASA."></img>
-		</figure>
-		
+	<header class="text-center">
+		<h1>Mary Jackson</h1>
+		<p id="subtitle">Mathematician and Aerospace Engineer</p>
+		<hr>
 	</header>
 
+	<figure class="text-center">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Mary Jackson working at NASA."></img>
+	</figure>
+
 	<div id="content">
-			<section id="intro">In a period of racial segregation and (still persisting) gender bias in the STEM fields, Mary Jackson overcame the odds to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on author Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>. Jackson's determination and dedication to fostering diversity in STEM is apparent throughout her lifework.</section>
+		<section id="intro">In a period of racial segregation and (still persisting) gender bias in the STEM fields, Mary Jackson overcame the odds to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on author Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>. Jackson's determination and dedication to fostering diversity in STEM is apparent throughout her lifework.</section>
 
 		<section class="well">
-			<h2>Timeline</h2>
+			<h2 class="section-title">Timeline</h2>
 			<p><span class = "year">1921</span> - Born on April 9 to Ella and Frank Winston.</p>
 			<p><span class = "year">1937</span> - Graduated from George P. Phenix Training School, an all-black school. </p>
 			<p><span class = "year">1942</span> - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
@@ -45,7 +46,7 @@
 		</section>
 
 		<section class="well">
-			<h2>Other career achievements/activities:</h2>
+			<h2 class="section-title">Other career achievements/activities:</h2>
 			<ul>
 			<li>Served as a Girl Scouts leader for 20 years.</li>
 			<li>Was a member of the Alpha Kappa Alpha Sorority.</li>
@@ -53,9 +54,8 @@
 			<li>Received Langley's Volunteer of the Year Award in 1976.</li>
 			</ul>
 		</section>
-
-		<footer id="more-info">To learn more about Mary Jackson, please visit <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjq_Oj_4PzUAhUI7oMKHdfcA0MQFggmMAA&url=https%3A%2F%2Fwww.nasa.gov%2Fcontent%2Fmary-jackson-biography&usg=AFQjCNHkZrrJYSQKRdB0Jyo6VJy8SXRjdw">NASA</a>.</footer>
-
 	</div>
+
+	<footer class="text-center">To learn more about Mary Jackson, please visit <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjq_Oj_4PzUAhUI7oMKHdfcA0MQFggmMAA&url=https%3A%2F%2Fwww.nasa.gov%2Fcontent%2Fmary-jackson-biography&usg=AFQjCNHkZrrJYSQKRdB0Jyo6VJy8SXRjdw">NASA</a>.</footer>
 </body>
 </html>
