--- a/index.html
+++ b/index.html
@@ -5,57 +5,58 @@
 <head>
 	<!--- Bootstrap CDN --> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-	<!-- CSS -->
+	<script src="script.js"></script>
 	<link rel="stylesheet" href="style.css">
-
-	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Open Sans|Playfair Display" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
 
 	<title>Mary Jackson</title>
 </head>
 
 <body>
-	<header class="text-center">
-		<h1>Mary Jackson</h1>
-		<p id="subtitle">Mathematician and Aerospace Engineer</p>
+	<main id="main">
+		<header>
+			<p id="text-above-title">A Tribute To</p>
+			<h1 id="title">Mary Jackson</h1>
+			<p id="text-below-title">Mathematician and Aerospace Engineer</p>
+		</header>
 		<hr>
-	</header>
 
-	<figure class="text-center">
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Mary Jackson working at NASA."></img>
-	</figure>
+		<div id="tribute-info">
+			<div id="top">
+				<section id="intro">In a period of racial segregation and (still persisting) gender bias in the STEM fields, Mary Jackson overcame the odds to become <mark>NASA's first black female engineer.</mark> She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on author Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>. Jackson's determination and dedication to fostering diversity in STEM is apparent throughout her lifework.</section>
 
-	<div id="content">
-		<section id="intro">In a period of racial segregation and (still persisting) gender bias in the STEM fields, Mary Jackson overcame the odds to become NASA's first black female engineer. She is one of the inspiring characters featured in the film <i>Hidden Figures</i>, which is based on author Margot Lee Shetterly's 2016 novel, <i>Hidden Figures: The American Dream and the Untold Story of the Black Women Who Helped Win the Space Race</i>. Jackson's determination and dedication to fostering diversity in STEM is apparent throughout her lifework.</section>
+				<figure id="img-div">
+						<img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Mary_Jackson_working.jpg/619px-Mary_Jackson_working.jpg" alt="Mary Jackson working at NASA."></img>
+						<figcaption id="img-caption">Mary Jackson checking controls and recording notes at the NASA Langley Research Center.</figcaption>
+				</figure>
+			</div>
 
-		<section class="well">
-			<h2 class="section-title">Timeline</h2>
-			<p><span class = "year">1921</span> - Born on April 9 to Ella and Frank Winston.</p>
-			<p><span class = "year">1937</span> - Graduated from George P. Phenix Training School, an all-black school. </p>
-			<p><span class = "year">1942</span> - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
-			<p><span class = "year">1942-1943</span> - Taught math at a black school in Calvert County, Maryland.</p>
-			<p><span class = "year">1943</span> - Worked as a secretary and bookkeeper for the United Service Organizations. 
-			<p><span class = "year">1951</span> - Recruited by the National Advisory Committee for Aeronautics (which later became NASA) to work at the Langley Research Center in Hampton, VA. She began her career there as a human computer in the segregated West Area Computing Section.</p>
-			<p><span class = "year">1953</span> - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to join a special training program and take courses in math and physics to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to be allowed to take the required graduate courses, which at the time were only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
-			<p><span class = "year">1979</span> - Took a demotion to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager. Was dedicated to helping women and other minorities at NASA advance their careers.</p>
-			<p><span class = "year">1985</span> - Retired from NASA.</p>
-			<p><span class = "year">2005</span> - Passed away on February 11 at age 83.</p>
-		</section>
+			<section class="well">
+				<h2 class="section-title">Timeline</h2>
+				<p><span class = "year">1921</span> - Born on April 9 to Ella and Frank Winston.</p>
+				<p><span class = "year">1937</span> - Graduated from George P. Phenix Training School, an all-black school. </p>
+				<p><span class = "year">1942</span> - Graduated from Hampton Institute with Bachelor's Degrees in Mathematics and Physical Science.</p>
+				<p><span class = "year">1942-1943</span> - Taught math at a black school in Calvert County, Maryland.</p>
+				<p><span class = "year">1943</span> - Worked as a secretary and bookkeeper for the United Service Organizations.</p> 
+				<p><span class = "year">1951</span> - Recruited by the National Advisory Committee for Aeronautics (which later became NASA) to work at the Langley Research Center in Hampton, VA. She began her career there as a human computer in the segregated West Area Computing Section.</p>
+				<p><span class = "year">1953</span> - Worked in the Supersonic Pressure Tunnel. Was encouraged by her supervisor to join a special training program and take courses in math and physics to be promoted to an aerospace engineer. Successfully petitioned the City of Hampton to be allowed to take the required graduate courses, which at the time were only offered to white students. Completed the courses and training, and became <b>NASA's first black female engineer.</b></p>
+				<p><span class = "year">1979</span> - Took a demotion to work as Langley's Office of Equal Opportunity Programs Manager and the Affirmative Action Program Manager. Was dedicated to helping women and other minorities at NASA advance their careers.</p>
+				<p><span class = "year">1985</span> - Retired from NASA.</p>
+				<p><span class = "year">2005</span> - Passed away on February 11 at age 83.</p>
+			</section>
 
-		<section class="well">
-			<h2 class="section-title">Other career achievements/activities:</h2>
-			<ul>
-			<li>Served as a Girl Scouts leader for 20 years.</li>
-			<li>Was a member of the Alpha Kappa Alpha Sorority.</li>
-			<li>Received the Apollo Group Achievement Award.</li>
-			<li>Received Langley's Volunteer of the Year Award in 1976.</li>
-			</ul>
-		</section>
-	</div>
+			<section class="well">
+				<h2 class="section-title">Other career achievements/activities:</h2>
+				<ul>
+				<li>Served as a Girl Scouts leader for 20 years.</li>
+				<li>Was a member of the Alpha Kappa Alpha Sorority.</li>
+				<li>Received the Apollo Group Achievement Award.</li>
+				<li>Received Langley's Volunteer of the Year Award in 1976.</li>
+				</ul>
+			</section>
+		</div>
 
-	<footer class="text-center">To learn more about Mary Jackson, please visit <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjq_Oj_4PzUAhUI7oMKHdfcA0MQFggmMAA&url=https%3A%2F%2Fwww.nasa.gov%2Fcontent%2Fmary-jackson-biography&usg=AFQjCNHkZrrJYSQKRdB0Jyo6VJy8SXRjdw">NASA</a>.</footer>
+		<footer id="tribute-link">To learn more about Mary Jackson, please visit <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjq_Oj_4PzUAhUI7oMKHdfcA0MQFggmMAA&url=https%3A%2F%2Fwww.nasa.gov%2Fcontent%2Fmary-jackson-biography&usg=AFQjCNHkZrrJYSQKRdB0Jyo6VJy8SXRjdw" target="_blank">NASA</a>.</footer>
+	</main id="main">
 </body>
 </html>
